ADD - little thingies my dude

--- a/APP/Templates/index.html
+++ b/APP/Templates/index.html
@@ -1,12 +1,14 @@
 <html>
     <head>
-        <title>Sistema de Inscrições</title>
+        <title>Auxiliador de Inscrições</title>
     </head>
     <body>
-        <H1>Sistema de Inscrições</H1> <br>
-        <a href="/matricula">Matricula</a> <br>
-        <a href="/bolsas">Bolsas</a> <br>
-        <a href="/horarios_grupo_matricula">Horários por Grupos de Matricula</a> <br>
-        <a href="/horarios_departamento">Horários por Departamento</a> <br>
+        <form method="POST" action="">
+            <center>
+                <H1>Auxiliador de Inscrições</H1> <br>
+                Cartão <input type="text" name="cartao"/> <br>
+                <input type="submit">
+            </center>
+        </form>
     </body>
 </html>
