--- a/APP/Templates/matricula.html
+++ b/APP/Templates/matricula.html
@@ -3,8 +3,9 @@
         <title>Sistema de Inscrições</title>
     </head>
     <body>
-        {% for turma in turmas %}
+        <!-- {% for turma in turmas %}
         <div><p>{{ turma[0] }} - {{ turma[1] }}</b></p></div>
-        {% endfor %}
+        {% endfor %} -->
+        <p>{{ cartao }}</p>
     </body>
 </html>
