--- a/APP/Templates/matricula.html
+++ b/APP/Templates/matricula.html
@@ -3,9 +3,8 @@
         <title>Sistema de Inscrições</title>
     </head>
     <body>
-        <!-- {% for turma in turmas %}
-        <div><p>{{ turma[0] }} - {{ turma[1] }}</b></p></div>
-        {% endfor %} -->
-        <p>{{ cartao }}</p>
+        {% for turma in turmas %}
+        <div><p>{{ turma[0] }} - {{ turma[1] }} - {{ turma[2] }} - {{ turma[3] }} - {{ turma[4] }} - {{ turma[5] }}</b></p></div>
+        {% endfor %}
     </body>
 </html>
