ADD - Lista de Bolsas

--- a/APP/Templates/lista.html
+++ b/APP/Templates/lista.html
@@ -5,7 +5,7 @@
     <body>
         <H1>Sistema de Inscrições</H1> <br>
         <a href="/matricula/{{ cartao }}">Matricula</a> <br>
-        <a href="/bolsas/{{ cartao }}">Bolsas</a> <br>
+        <a href="/bolsas">Bolsas</a> <br>
         <a href="/horarios_grupo_matricula">Horários por Grupos de Matricula</a> <br>
         <a href="/horarios_departamento">Horários por Departamento</a> <br>
     </body>
