Horarios por Dep e coisinhas

--- a/APP/Templates/bolsas.html
+++ b/APP/Templates/bolsas.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bolsas - Sistema de Inscrições</title>
+        <title>Auxiliador de Inscrições</title>
     </head>
     <body>
         <h1>Lista de Bolsas</h1>
