--- a/APP/Templates/horarios_departamento.html
+++ b/APP/Templates/horarios_departamento.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <title>{{ habNome[0][0] }} - Auxiliador de Inscrições</title>
+        <title>{{ depNome[0][0] }} - Auxiliador de Inscrições</title>
     </head>
     <body>
-        <h1>Horários por Grupo de Matricula - {{ habNome[0][0] }}</h1>
+        <h1>Horários por Grupo de Matricula - {{ depNome[0][0] }}</h1>
         <table>
             <tr>
                 <th>Disciplina</th>
