--- a/APP/Templates/lista.html
+++ b/APP/Templates/lista.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>Sistema de Inscrições</title>
+        <title>Auxiliador de Inscrições</title>
     </head>
     <body>
-        <H1>Sistema de Inscrições</H1> <br>
+        <H1>Auxiliador de Inscrições</H1> <br>
         <a href="/matricula/{{ cartao }}">Matricula</a> <br>
         <a href="/bolsas">Bolsas</a> <br>
         <a href="/grupo_matricula_selector">Horários por Grupos de Matricula</a> <br>
-        <a href="/horarios_departamento">Horários por Departamento</a> <br>
+        <a href="/departamento_selector">Horários por Departamento</a> <br>
     </body>
 </html>
