--- a/APP/Templates/matricula.html
+++ b/APP/Templates/matricula.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Matricula - Sistema de Inscrições</title>
+        <title>Auxiliador de Inscrições</title>
     </head>
     <body>
         <table>
