--- a/APP/Templates/lista.html
+++ b/APP/Templates/lista.html
@@ -5,8 +5,9 @@
     <body>
         <H1>Auxiliador de Inscrições</H1> <br>
         <a href="/matricula/{{ cartao }}">Matricula</a> <br>
-        <a href="/bolsas">Bolsas</a> <br>
+        <a href="/bolsas/{{ cartao }}">Bolsas</a> <br>
         <a href="/grupo_matricula_selector">Horários por Grupos de Matricula</a> <br>
         <a href="/departamento_selector">Horários por Departamento</a> <br>
+        <a href="/consultas">Consultas do item 2</a> <br>
     </body>
 </html>
