--- a/APP/Templates/matricula.html
+++ b/APP/Templates/matricula.html
@@ -6,7 +6,7 @@
         <form method="post" id="matricula">
             <table>
                 <tr>
-                    <th>Matricular</th>
+                    <th>Matricula</th>
                     <th>Nome disciplina</th>
                     <th>creditos</th>
                     <th>cod turma</th>
